
name:                unlang
version:             1.0.0.0
synopsis:            The unique computer language
-- description:
license:             MIT
license-file:        LICENSE
author:              Nicolas Godbout
maintainer:          nicolas.godbout@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable unlang
  main-is:             Main.hs
  other-modules:       UnLex, UnParse
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       pretty >=1.1 && <1.2
  -- hs-source-dirs:
  build-tools:         alex, happy
  build-depends:       array >= 0.5 && <0.6
  default-language:    Haskell2010
